--- a/manifests/vector/http_to_kafka.yaml
+++ b/manifests/vector/http_to_kafka.yaml
@@ -20,7 +20,7 @@ spec:
       - name: vector
         image: timberio/vector:0.47.0-debian
         ports:
-        - containerPort: 8686
+        - containerPort: 80
           name: http
         - containerPort: 8686
           name: metrics
@@ -64,9 +64,13 @@ metadata:
 spec:
   type: ClusterIP
   ports:
+  - port: 80
+    targetPort: 80
+    protocol: TCP
+    name: http
   - port: 8686
     targetPort: 8686
     protocol: TCP
-    name: http
+    name: metrics
   selector:
     app: vector-http-to-kafka
