Update qwen3-embedding deployment and service names to use hyphens instead of periods

--- a/manifests/llm-serving/cpp/qwen3-embedding-0.6b.yaml
+++ b/manifests/llm-serving/cpp/qwen3-embedding-0.6b.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: qwen3-embedding-0.6b
+  name: qwen3-embedding-0-6b
   namespace: llm-serving
   labels:
-    app: qwen3-embedding-0.6b
+    app: qwen3-embedding-0-6b
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: qwen3-embedding-0.6b
+      app: qwen3-embedding-0-6b
   template:
     metadata:
       labels:
-        app: qwen3-embedding-0.6b
+        app: qwen3-embedding-0-6b
     spec:
       runtimeClassName: nvidia
       containers:
@@ -36,8 +36,8 @@ spec:
             - name: LLAMA_CACHE
               value: /opt/llama_cpp/cache
           volumeMounts:
-          - name: cache-volume
-            mountPath: /opt/llama_cpp/cache
+            - name: cache-volume
+              mountPath: /opt/llama_cpp/cache
           startupProbe:
             httpGet:
               path: /health
@@ -73,13 +73,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: qwen3-embedding-0.6b-service
+  name: qwen3-embedding-0-6b-service
   namespace: llm-serving
   labels:
-    app: qwen3-embedding-0.6b
+    app: qwen3-embedding-0-6b
 spec:
   selector:
-    app: qwen3-embedding-0.6b
+    app: qwen3-embedding-0-6b
   ports:
   - name: http
     port: 8080
