Update nodeSelector in qwen3-embedding YAML to specify GPU product as Orin

--- a/manifests/llm-serving/cpp/qwen3-embedding-0.6b.yaml
+++ b/manifests/llm-serving/cpp/qwen3-embedding-0.6b.yaml
@@ -68,7 +68,7 @@ spec:
             path: /mnt/mfs/k8s/llama_cpp/cache
             type: DirectoryOrCreate
       nodeSelector:
-        nvidia.com/gpu.present: "true"
+        nvidia.com/gpu.product: Orin
 ---
 apiVersion: v1
 kind: Service
