--- a/manifests/llm-serving/cpp/qwen3-embedding-0.6b.yaml
+++ b/manifests/llm-serving/cpp/qwen3-embedding-0.6b.yaml
@@ -21,6 +21,10 @@ spec:
           image: dustynv/llama_cpp:b5283-r36.4-cu128-24.04
           args:
             - llama-server
+            - --host
+            - 0.0.0.0
+            - --port
+            - 8080
             - --hf-repo
             - Qwen/Qwen3-Embedding-0.6B-GGUF:Q8_0
             - --embedding
