Update ollama deployment namespace from 'ollama' to 'llm-serving' in deployment.yaml and traefik-configs/ollama.yaml

--- a/manifests/traefik-configs/ollama.yaml
+++ b/manifests/traefik-configs/ollama.yaml
@@ -11,7 +11,7 @@ spec:
       services:
         - kind: Service
           name: ollama
-          namespace: ollama
+          namespace: llm-serving
           port: 80
   tls:
     secretName: ig-ingtra-net-tls
