INFRA-5 add host url for coder ingress

--- a/manifests/traefik-configs/coder.yaml
+++ b/manifests/traefik-configs/coder.yaml
@@ -7,7 +7,7 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`coder.ig.ingtra.net`)
+      match: Host(`coder.ig.ingtra.net`) || Host(`cdr.ing.gg`)
       services:
         - kind: Service
           name: coder
