--- a/clusters/home/argo-applications/coder.yaml
+++ b/clusters/home/argo-applications/coder.yaml
@@ -29,6 +29,20 @@ spec:
               value: "https://coder.ig.ingtra.net"
             - name: CODER_OAUTH2_GITHUB_DEFAULT_PROVIDER_ENABLE
               value: "false"
+            - name: CODER_OIDC_ISSUER_URL
+              value: "http://10.1.0.12:9000/application/o/coder/"
+            - name: CODER_OIDC_EMAIL_DOMAIN
+              value: "gmail.com"
+            - name: CODER_OIDC_CLIENT_ID
+              valueFrom:
+                secretKeyRef:
+                  name: secrets
+                  key: coder-oidc-client-id
+            - name: CODER_OIDC_CLIENT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: secrets
+                  key: coder-oidc-client-secret
           service:
             type: ClusterIP
   destination:
