add OIDC configuration to disable password authentication and signups

--- a/clusters/home/argo-applications/coder.yaml
+++ b/clusters/home/argo-applications/coder.yaml
@@ -43,6 +43,10 @@ spec:
                 secretKeyRef:
                   name: secrets
                   key: coder-oidc-client-secret
+            - name: CODER_DISABLE_PASSWORD_AUTH
+              value: "false"
+            - name: CODER_OIDC_ALLOW_SIGNUPS
+              value: "false"
           service:
             type: ClusterIP
   destination:
