--- a/clusters/home/argo-applications/coder.yaml
+++ b/clusters/home/argo-applications/coder.yaml
@@ -33,6 +33,8 @@ spec:
               value: "https://att.ing.gg/application/o/coder/"
             - name: CODER_OIDC_EMAIL_DOMAIN
               value: "gmail.com"
+            - name: CODER_OIDC_SCOPES
+              value: "openid,profile,email,offline_access"
             - name: CODER_OIDC_CLIENT_ID
               valueFrom:
                 secretKeyRef:
