fix: update localai image version to v3.3.1-nvidia-l4t-arm64

--- a/manifests/llm-serving/localai/deployment.yaml
+++ b/manifests/llm-serving/localai/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       runtimeClassName: nvidia
       containers:
         - name: localai
-          image: localai/localai:v3.1.1-nvidia-l4t
+          image: localai/localai:v3.3.1-nvidia-l4t-arm64
           args:
             - "--models-path"
             - "/models"
