--- a/manifests/traefik-configs/localai.yaml
+++ b/manifests/traefik-configs/localai.yaml
@@ -11,7 +11,7 @@ spec:
       services:
         - kind: Service
           name: localai
-          namespace: localai
+          namespace: llm-serving
           port: 80
   tls:
     secretName: ig-ingtra-net-tls
