fix: correct argument for localai worker to use llama-cpp-rpc

--- a/manifests/llm-serving/localai/deployment.yaml
+++ b/manifests/llm-serving/localai/deployment.yaml
@@ -76,7 +76,7 @@ spec:
           image: localai/localai:v3.3.1-nvidia-l4t-arm64
           args:
             - "worker"
-            - "p2p-llama-cpp-rpc"
+            - "llama-cpp-rpc"
             - "--llama-cpp-args="
           env:
             - name: NVIDIA_VISIBLE_DEVICES
