--- a/manifests/llm-serving/localai/deployment.yaml
+++ b/manifests/llm-serving/localai/deployment.yaml
@@ -75,7 +75,7 @@ spec:
           args:
             - "worker"
             - "llama-cpp-rpc"
-            - "--llama-cpp-args="
+            - "--llama-cpp-args=--host 0.0.0.0 --port 50051"
           env:
             - name: NVIDIA_VISIBLE_DEVICES
               value: "all"
