fix: add additional arguments for log level and preload backend in localai-server

--- a/manifests/llm-serving/localai/deployment.yaml
+++ b/manifests/llm-serving/localai/deployment.yaml
@@ -22,6 +22,8 @@ spec:
           image: localai/localai:v3.3.1-nvidia-l4t-arm64
           args:
             - "run"
+            - "--loglevel=debug"
+            - "--preload-backend-only"
           env:
             - name: NVIDIA_VISIBLE_DEVICES
               value: "all"
