--- a/manifests/llm-serving/localai/deployment.yaml
+++ b/manifests/llm-serving/localai/deployment.yaml
@@ -30,8 +30,9 @@ spec:
               value: /localai/models
             - name: LOCALAI_BACKENDS_PATH
               value: /localai/backends
-            - name: LLAMACPP_GRPC_SERVERS
-              value: "localai-worker-0.localai-worker:50051,localai-worker-1.localai-worker:50051,localai-worker-2.localai-worker:50051"
+            - name: LOCALAI_P2P
+              value: "true"
+  
           volumeMounts:
             - name: localai-volume
               mountPath: /localai
