fix: update localai-server args to use 'federated' instead of 'run'

--- a/manifests/llm-serving/localai/deployment.yaml
+++ b/manifests/llm-serving/localai/deployment.yaml
@@ -21,7 +21,7 @@ spec:
         - name: localai-server
           image: localai/localai:v3.3.1-nvidia-l4t-arm64
           args:
-            - "run"
+            - "federated"
             - "--log-level=debug"
           env:
             - name: NVIDIA_VISIBLE_DEVICES
