--- a/manifests/llm-serving/localai/deployment.yaml
+++ b/manifests/llm-serving/localai/deployment.yaml
@@ -31,7 +31,7 @@ spec:
             - name: LOCALAI_BACKENDS_PATH
               value: /localai/backends
             - name: LOCALAI_P2P_LISTEN_MADDRS
-              value: "/dns/localai-server/tcp/40207"
+              value: "/ip4/0.0.0.0/tcp/40207"
             - name: TOKEN
               valueFrom:
                 secretKeyRef:
