fix: add security context to filestash deployment

--- a/manifests/filestash-configs/deployments.yaml
+++ b/manifests/filestash-configs/deployments.yaml
@@ -17,6 +17,8 @@ spec:
         image: machines/filestash:latest
         ports:
         - containerPort: 8334
+        securityContext:
+          runAsUser: 0
         env:
         - name: APPLICATION_URL
           value: "filestash.ig.ingtra.net"
