fix: add imagePullPolicy to qwen3-embedding container

--- a/manifests/llm-serving/cpp/qwen3-embedding-0.6b.yaml
+++ b/manifests/llm-serving/cpp/qwen3-embedding-0.6b.yaml
@@ -19,6 +19,7 @@ spec:
       containers:
         - name: qwen3-embedding
           image: docker.io/cookieshake/llamacpp-jetson:b6092
+          imagePullPolicy: Always
           args:
             - --host
             - "0.0.0.0"
