--- a/manifests/traefik-configs/llama-cpp.yaml
+++ b/manifests/traefik-configs/llama-cpp.yaml
@@ -15,6 +15,15 @@ spec:
           port: 8080
       middlewares:
         - name: llama-cpp-stripprefix
+    - kind: Rule
+      match: Host(`llama-cpp.ig.ingtra.net`) && PathPrefix(`/smollm3-3b`)
+      services:
+        - kind: Service
+          name: smollm3-3b
+          namespace: llm-serving
+          port: 8080
+      middlewares:
+        - name: llama-cpp-stripprefix
   tls:
     secretName: ig-ingtra-net-tls
 ---
@@ -26,4 +35,5 @@ spec:
   stripPrefix:
     prefixes:
       - /qwen3-embedding-0-6b
+      - /smollm3-3b
 
