fix: update hf-repo argument for lfm2-1-2b deployment; add jinja argument

--- a/manifests/llm-serving/cpp/lfm2-1-2b.yaml
+++ b/manifests/llm-serving/cpp/lfm2-1-2b.yaml
@@ -28,7 +28,8 @@ spec:
             - --parallel
             - "3"
             - --hf-repo
-            - LiquidAI/LFM2-1.2B-GGUF:Q4_K_M
+            - unsloth/LFM2-1.2B-GGUF:UD-Q4_K_XL
+            - --jinja
           ports:
             - containerPort: 8080
               name: http
